--- a/res/theme_fluid.css
+++ b/res/theme_fluid.css
@@ -34,6 +34,10 @@ body.scheme_fluid,
 .scheme_fluid input[type='button'] {
 	font-family: 'Lato', sans-serif;
 }
+.scheme_fluid .btn.small-text span,
+.scheme_fluid .btn.small-text a {
+	font-size: 93%;
+}
 .scheme_fluid .btn {
 	color: gray;
 	margin-bottom: 8px; /* default margin-bottom: 10px; */
@@ -61,6 +65,10 @@ body.scheme_fluid,
                 0 1px 0 rgba(187, 192, 202, 0.4); /* color #BBC0CA */
 	cursor: inherit;
 }
+.scheme_fluid .btn.modern.disabled.btnWrapper,
+.scheme_fluid .btn.modern.disabled.btnWrapper:hover {
+	box-shadow: none;
+}
 .scheme_fluid .btn.modern.disabled span.btnTitle { /* to change only the properties of the button name for buttons disabled */
 	color: #000000;
 }
@@ -77,6 +85,10 @@ body.scheme_fluid,
 	border: solid 1px rgba(209, 214, 223, 0.7); /* color #D1D6DF */
 	box-shadow: none;
 	cursor: pointer;
+}
+.scheme_fluid .btn.modern:not(.disabled).btnInterior,
+.scheme_fluid .btn.modern:not(.disabled).btnInterior:hover {
+	box-shadow: none;
 }
 .scheme_fluid .census-block .links-container span,
 .scheme_fluid .btn.modern:not(.disabled) span.btnTitle { /* to change only the properties of the button name for buttons enabled */
@@ -116,35 +128,63 @@ body.scheme_fluid,
 .scheme_fluid .modern .btnContent {
     padding: 10px 0 10px 1px; /* 1px left for buttons without power background-image */
 }
+.scheme_fluid div.modern.small-text.disabled:not(.bldEnabled):not(.bldlackResConvert) > div.btnContent,
+.scheme_fluid div.modern.small-text:not(.disabled):not(.bldEnabled):not(.bldlackResConvert) > div.btnContent {
+	padding: 9px 0 10px 1px;
+}
 /*** green and red light for machine on/off ***/
 .scheme_fluid .btn.bldEnabled div.btnContent,
 .scheme_fluid .btn.bldlackResConvert div.btnContent {
 	border: none; /* also allows you to remove the height difference with the other buttons (they have no border on div.content) */
-	padding: 10px 0 10px 13px; /* 13px left for power background-image */
+	padding: 9px 0 10px 13px; /* 13px left for power background-image */
 }
 .scheme_fluid .btn.disabled.bldlackResConvert { /* color for lack resources convertion */
 	background: no-repeat border-box linear-gradient(90deg, #C24911 0%, #C24911 10px, #404040 12px, #404040 100%);
 }
+.scheme_fluid .btn.disabled.bldlackResConvert.btnInterior {
+	background: no-repeat border-box linear-gradient(90deg, #C24911 0%, #C24911 9px, #404040 11px, #404040 100%);
+}
 .scheme_fluid .btn.disabled.bldlackResConvert:hover {
 	background: no-repeat border-box linear-gradient(90deg, #C24911 0, #C24911 10px, #404040 12px, #404040 100%);
+}
+.scheme_fluid .btn.disabled.bldlackResConvert.btnInterior:hover {
+	background: no-repeat border-box linear-gradient(90deg, #C24911 0, #C24911 9px, #404040 11px, #404040 100%);
 }
 .scheme_fluid .btn:not(.disabled).bldlackResConvert {
 	background: no-repeat border-box linear-gradient(90deg, #C24911 0%, #C24911 10px, #666666 12px, #666666 100%);
 }
+.scheme_fluid .btn:not(.disabled).bldlackResConvert.btnInterior {
+	background: no-repeat border-box linear-gradient(90deg, #C24911 0%, #C24911 9px, #666666 11px, #666666 100%);
+}
 .scheme_fluid .btn:not(.disabled).bldlackResConvert:hover {
 	background: no-repeat border-box linear-gradient(90deg, #d34300 0, #d34300 10px, #118AC2 12px, #118AC2 100%);
+}
+.scheme_fluid .btn:not(.disabled).bldlackResConvert.btnInterior:hover {
+	background: no-repeat border-box linear-gradient(90deg, #d34300 0, #d34300 9px, #118AC2 11px, #118AC2 100%);
 }
 .scheme_fluid .btn.disabled.bldEnabled {
 	background: no-repeat border-box linear-gradient(90deg, #7AA738 0%, #7AA738 10px, #404040 12px, #404040 100%);
 }
+.scheme_fluid .btn.disabled.bldEnabled.btnInterior {
+	background: no-repeat border-box linear-gradient(90deg, #7AA738 0%, #7AA738 9px, #404040 11px, #404040 100%);
+}
 .scheme_fluid .btn.disabled.bldEnabled:hover {
 	background: no-repeat border-box linear-gradient(90deg, #7AA738 0, #7AA738 10px, #404040 12px, #404040 100%);
+}
+.scheme_fluid .btn.disabled.bldEnabled.btnInterior:hover {
+	background: no-repeat border-box linear-gradient(90deg, #7AA738 0, #7AA738 9px, #404040 11px, #404040 100%);
 }
 .scheme_fluid .btn:not(.disabled).bldEnabled {
 	background: no-repeat border-box linear-gradient(90deg, #7AA738 0%, #7AA738 10px, #666666 12px, #666666 100%);
 }
+.scheme_fluid .btn:not(.disabled).bldEnabled.btnInterior {
+	background: no-repeat border-box linear-gradient(90deg, #7AA738 0%, #7AA738 9px, #666666 11px, #666666 100%);
+}
 .scheme_fluid .btn:not(.disabled).bldEnabled:hover {
 	background: no-repeat border-box linear-gradient(90deg, #94dc23 0, #94dc23 10px, #118AC2 12px, #118AC2 100%);
+}
+.scheme_fluid .btn:not(.disabled).bldEnabled.btnInterior:hover {
+	background: no-repeat border-box linear-gradient(90deg, #94dc23 0, #94dc23 9px, #118AC2 11px, #118AC2 100%);
 }
 /*** end of green light for machine on/off ***/
 .scheme_fluid .dialog {
@@ -470,8 +510,11 @@ body.scheme_fluid,
 	color: #808080;
 	font-weight: 300;
 	background-color: transparent;
-	padding: 10px 3px 10px 3px !important; /* default :  padding: 10px 6px 10px 6px !important; */
+	padding: 11px 3px 10px 3px !important; /* default :  padding: 10px 6px 10px 6px !important; */
 	/* default min-width: 20px; */
+}
+.scheme_fluid div.btn.modern.btnInterior:not(.disabled):not(.bldEnabled):not(.bldlackResConvert) a {
+	padding-top: 10px !important;
 }
 .scheme_fluid .btn.modern:not(.disabled) a {
 	color: #202020;
