--- a/res/theme_school.css
+++ b/res/theme_school.css
@@ -25,6 +25,12 @@ body.scheme_school.with_background_image,
 .scheme_school input[type='button'] {
 	font-family: 'Delius Swash Caps', cursive;
 }
+.scheme_school .btnWrapper {
+	background: transparent !important;
+}
+.scheme_school .btn.small-text span {
+    font-size: 83.6%;
+}
 .scheme_school .btn {
 	color: gray;
 	margin-bottom: 7px; /* default 10px */
@@ -33,6 +39,9 @@ body.scheme_school.with_background_image,
 	border: solid 1px transparent;
 	border-radius: 5px;
 }
+.scheme_school .btn.btnInterior {
+	border-radius: 4px;
+}
 .scheme_school .btn.modern.disabled {
 	background-color: rgba(85, 85, 85, 0.4); /* color #555555 */
 	border: solid 1px rgba(85, 85, 85, 0.1); /* color #555555 */
@@ -40,6 +49,9 @@ body.scheme_school.with_background_image,
 .scheme_school .btn.modern.disabled:hover {
 	background-color: rgba(85, 85, 85, 0.4); /* color #555555 */
 	border: solid 1px rgba(85, 85, 85, 0.7); /* color #555555 */
+}
+.scheme_school .btn.modern.disabled.btnWrapper {
+	border: solid 1px rgba(85, 85, 85, 0.5);
 }
 .scheme_school .btn.modern.disabled span.btnTitle { /* to change only the properties of the button name for buttons disabled */
 	color: #81848C;
@@ -57,6 +69,15 @@ body.scheme_school.with_background_image,
 	border: solid 1px rgba(209, 214, 223, 0.7); /* color #D1D6DF */
 	cursor: pointer;
 	box-shadow: 2px 2px 3px #000000;
+}
+.scheme_school .btn.modern.btnWrapper:not(.disabled) { 
+	border: solid 1px rgba(107, 112, 122, 0.6);
+}
+.scheme_school .btn.modern.btnWrapper:not(.disabled):hover {
+	border: solid 1px rgba(209, 214, 223, 0.7);
+}
+.scheme_school .btn.modern.btnWrapper.disabled:hover {
+	border: solid 1px rgba(85, 85, 85, 0.7);
 }
 .scheme_school .btn.modern:not(.disabled) span.btnTitle { /* to change only the properties of the button name for buttons enabled */
 	color: #ABAEB7;
@@ -94,35 +115,62 @@ body.scheme_school.with_background_image,
 .scheme_school .modern .btnContent {
     padding: 10px 0 10px 1px; /* 1px left for buttons without power background-image */
 }
+.scheme_school .modern.small-text .btnContent {
+	padding: 8px 0 9px 1px;
+}
 /*** green and red light for machine on/off ***/
 .scheme_school .btn.bldEnabled div.btnContent,
 .scheme_school .btn.bldlackResConvert div.btnContent {
-	padding: 10px 0 10px 15px; /* 15px left for power background-image (linear-gradient) */
+	padding: 8px 0 9px 15px; /* 15px left for power background-image (linear-gradient) */
 	border: none; /* also allows you to remove the height difference with the other buttons (they have no border on div.content) */
 }
 .scheme_school .btn.disabled.bldlackResConvert { /* color #973B47 */ /* color for lack resources convertion */
 	background: no-repeat border-box linear-gradient(90deg, #973B47 0%, #973B47 12px, rgba(85, 85, 85, 0.4) 14px, rgba(85, 85, 85, 0.4) 100%);
 }
+.scheme_school .btn.disabled.bldlackResConvert.btnInterior {
+	background: no-repeat border-box linear-gradient(90deg, #973B47 0%, #973B47 11px, rgba(85, 85, 85, 0.4) 13px, rgba(85, 85, 85, 0.4) 100%);
+}
 .scheme_school .btn.disabled.bldlackResConvert:hover {
 	background: no-repeat border-box linear-gradient(90deg, #973B47 0%, #973B47 12px, rgba(85, 85, 85, 0.4) 14px, rgba(85, 85, 85, 0.4) 100%);
+}
+.scheme_school .btn.disabled.bldlackResConvert.btnInterior:hover {
+	background: no-repeat border-box linear-gradient(90deg, #973B47 0%, #973B47 11px, rgba(85, 85, 85, 0.4) 13px, rgba(85, 85, 85, 0.4) 100%);
 }
 .scheme_school .btn:not(.disabled).bldlackResConvert {
 	background: no-repeat border-box linear-gradient(90deg, #973B47 0%, #973B47 12px, rgba(107, 112, 122, 0.5) 14px, rgba(107, 112, 122, 0.5) 100%);
 }
+.scheme_school .btn:not(.disabled).bldlackResConvert.btnInterior {
+	background: no-repeat border-box linear-gradient(90deg, #973B47 0%, #973B47 11px, rgba(107, 112, 122, 0.5) 13px, rgba(107, 112, 122, 0.5) 100%);
+}
 .scheme_school .btn:not(.disabled).bldlackResConvert:hover {
 	background: no-repeat border-box linear-gradient(90deg, #b74756 0%, #b74756 12px, rgba(107, 112, 122, 0.6) 14px, rgba(107, 112, 122, 0.6) 100%);
+}
+.scheme_school .btn:not(.disabled).bldlackResConvert.btnInterior:hover {
+	background: no-repeat border-box linear-gradient(90deg, #b74756 0%, #b74756 11px, rgba(107, 112, 122, 0.6) 13px, rgba(107, 112, 122, 0.6) 100%);
 }
 .scheme_school .btn.disabled.bldEnabled { /* color #3B7233 */
 	background: no-repeat border-box linear-gradient(90deg, #3B7233 0%, #3B7233 12px, rgba(85, 85, 85, 0.4) 14px, rgba(85, 85, 85, 0.4) 100%);
 }
+.scheme_school .btn.disabled.bldEnabled.btnInterior {
+	background: no-repeat border-box linear-gradient(90deg, #3B7233 0%, #3B7233 11px, rgba(85, 85, 85, 0.4) 13px, rgba(85, 85, 85, 0.4) 100%);
+}
 .scheme_school .btn.disabled.bldEnabled:hover {
 	background: no-repeat border-box linear-gradient(90deg, #3B7233 0%, #3B7233 12px, rgba(85, 85, 85, 0.4) 14px, rgba(85, 85, 85, 0.4) 100%);
+}
+.scheme_school .btn.disabled.bldEnabled.btnInterior:hover {
+	background: no-repeat border-box linear-gradient(90deg, #3B7233 0%, #3B7233 11px, rgba(85, 85, 85, 0.4) 13px, rgba(85, 85, 85, 0.4) 100%);
 }
 .scheme_school .btn:not(.disabled).bldEnabled {
 	background: no-repeat border-box linear-gradient(90deg, #3B7233 0%, #3B7233 12px, rgba(107, 112, 122, 0.5) 14px, rgba(107, 112, 122, 0.5) 100%);
 }
+.scheme_school .btn:not(.disabled).bldEnabled.btnInterior {
+	background: no-repeat border-box linear-gradient(90deg, #3B7233 0%, #3B7233 11px, rgba(107, 112, 122, 0.5) 13px, rgba(107, 112, 122, 0.5) 100%);
+}
 .scheme_school .btn:not(.disabled).bldEnabled:hover {
 	background: no-repeat border-box linear-gradient(90deg, #5eb252 0%, #5eb252 12px, rgba(107, 112, 122, 0.6) 14px, rgba(107, 112, 122, 0.6) 100%);
+}
+.scheme_school .btn:not(.disabled).bldEnabled.btnInterior:hover {
+	background: no-repeat border-box linear-gradient(90deg, #5eb252 0%, #5eb252 11px, rgba(107, 112, 122, 0.6) 13px, rgba(107, 112, 122, 0.6) 100%);
 }
 .scheme_school .dialog {
 	box-shadow: inset 0 1px 3px #000000;
@@ -452,7 +500,10 @@ body.scheme_school.with_background_image,
 	font-weight: 300;
 	color: #787d88;
 	background-color: transparent;
-	padding: 10px 3px 10px 3px !important; /* -1 pixel on vertical for correct align left border */
+	padding: 12px 3px 10px 3px !important; /* -1 pixel on vertical for correct align left border */
+}
+.scheme_school .btn.modern.btnInterior:not(.bldEnabled):not(.small-text) a {
+	padding: 10px 3px 10px 3px !important
 }
 .scheme_school .btn.modern:not(.disabled) a {
 	border-color: rgba(156, 159, 169, 0.1); /* color #9C9FA9 */
