--- a/res/theme_vessel.css
+++ b/res/theme_vessel.css
@@ -54,7 +54,7 @@ body.scheme_vessel {
 	background-color: rgba(0, 0, 0, 0.3);
 	border: solid 1px rgba(0, 0, 0, 0.5);
 	box-shadow: 1px 1px 3px #000000 inset,
-                 0 1px 0 rgba(204, 204, 204, 0.2) !important; /* color #CCCCCC */
+                 0 1px 0 rgba(204, 204, 204, 0.15) !important; /* color #CCCCCC */
 }
 .scheme_vessel .btn.modern.disabled:hover {
 	background-color: rgba(0, 0, 0, 0.85);
@@ -117,11 +117,29 @@ body.scheme_vessel {
 	/* 10px left not necessary for buttons without on/off */
 	padding: 10px 0 10px 1px; /* 1px left for buttons without power background-image */
 }
+.scheme_vessel .btn.small-text span,
+.scheme_vessel .btn.small-text a {
+    font-size: 92.6%;
+}
+.scheme_vessel .btn.modern.btnWrapper {
+	box-shadow: 1px 1px 3px #000000 inset, 0 1px 0 rgba(204, 204, 204, 0.15);
+	background: transparent;
+	background-color: transparent !important;
+}
+.scheme_vessel .btn.modern.btnInterior {
+	border-radius: 5px;
+}
+.scheme_vessel .btn.modern.btnInterior.small-text:not(.bldEnabled) .btnContent {
+	padding: 9px 0 10px 1px;
+}
+.scheme_vessel .btn.modern.btnInterior.small-text a {
+	margin: -9px 0;
+}
 /*** green and red light for machine on/off ***/
 .scheme_vessel .btn.bldEnabled div.btnContent,
 .scheme_vessel .btn.bldlackResConvert div.btnContent {
 	border: none; /* also allows you to remove the height difference with the other buttons (they have no border on div.content) */
-	padding: 10px 0 10px 18px; /* 18px left for power background-image - default padding: 10px 0 10px 10px; */
+	padding: 9px 0 10px 18px; /* 18px left for power background-image - default padding: 10px 0 10px 10px; */
 }
 .scheme_vessel .btn.bldlackResConvert div.btnContent {
 	background: no-repeat local left 3px center url('img/theme_vessel_battery_empty.png'); /* source of images for graphic design : https://pngtree.com/ Volkeyrn: permanent premium member */
