--- a/res/theme_vintage.css
+++ b/res/theme_vintage.css
@@ -112,6 +112,9 @@ body.scheme_vintage {
 .scheme_vintage .modern .btnContent {
     padding: 10px 0 10px 1px; /* 1px left for buttons without power background-image */
 }
+.scheme_vintage .btn.modern.btnInterior.disabled:hover {
+	box-shadow: none;
+}
 /*** green and red light for machine on/off ***/
 .scheme_vintage .btn.bldEnabled div.btnContent,
 .scheme_vintage .btn.bldlackResConvert div.btnContent {
@@ -121,26 +124,50 @@ body.scheme_vintage {
 .scheme_vintage .btn.disabled.bldlackResConvert { /* color for lack resources convertion */
 	background: no-repeat border-box linear-gradient(90deg, #cd564f 0%, #cd564f 12px, #161619 15px, #161619 100%);
 }
+.scheme_vintage .btn.disabled.bldlackResConvert.btnInterior {
+	background: no-repeat border-box linear-gradient(90deg, #cd564f 0%, #cd564f 11px, #161619 14px, #161619 100%);
+}
 .scheme_vintage .btn.disabled.bldlackResConvert:hover {
 	background: no-repeat border-box linear-gradient(90deg, #cd564f 0%, #cd564f 12px, #161619 15px, #161619 100%);
+}
+.scheme_vintage .btn.disabled.bldlackResConvert.btnInterior:hover {
+	background: no-repeat border-box linear-gradient(90deg, #cd564f 0%, #cd564f 11px, #161619 14px, #161619 100%);
 }
 .scheme_vintage .btn:not(.disabled).bldlackResConvert {
 	background: no-repeat border-box linear-gradient(90deg, #cd564f 0%, #cd564f 12px, #403e49 15px, #403e49 100%);
 }
+.scheme_vintage .btn:not(.disabled).bldlackResConvert.btnInterior {
+	background: no-repeat border-box linear-gradient(90deg, #cd564f 0%, #cd564f 11px, #403e49 14px, #403e49 100%);
+}
 .scheme_vintage .btn:not(.disabled).bldlackResConvert:hover {
 	background: no-repeat border-box linear-gradient(90deg, #B53B34 0%, #cd564f 12px, #d4b258 15px, #d4b258 100%);
+}
+.scheme_vintage .btn:not(.disabled).bldlackResConvert.btnInterior:hover {
+	background: no-repeat border-box linear-gradient(90deg, #B53B34 0%, #cd564f 11px, #d4b258 14px, #d4b258 100%);
 }
 .scheme_vintage .btn.disabled.bldEnabled {
 	background: no-repeat border-box linear-gradient(90deg, #709c85 0%, #709c85 12px, #161619 15px, #161619 100%);
 }
+.scheme_vintage .btn.disabled.bldEnabled.btnInterior {
+	background: no-repeat border-box linear-gradient(90deg, #709c85 0%, #709c85 11px, #161619 14px, #161619 100%);
+}
 .scheme_vintage .btn.disabled.bldEnabled:hover {
 	background: no-repeat border-box linear-gradient(90deg, #709c85 0%, #709c85 12px, #161619 15px, #161619 100%);
+}
+.scheme_vintage .btn.disabled.bldEnabled.btnInterior:hover {
+	background: no-repeat border-box linear-gradient(90deg, #709c85 0%, #709c85 11px, #161619 14px, #161619 100%);
 }
 .scheme_vintage .btn:not(.disabled).bldEnabled {
 	background: no-repeat border-box linear-gradient(90deg, #709c85 0%, #709c85 12px, #403e49 15px, #403e49 100%);
 }
+.scheme_vintage .btn:not(.disabled).bldEnabled.btnInterior {
+	background: no-repeat border-box linear-gradient(90deg, #709c85 0%, #709c85 11px, #403e49 14px, #403e49 100%);
+}
 .scheme_vintage .btn:not(.disabled).bldEnabled:hover {
 	background: no-repeat border-box linear-gradient(90deg, #1b786d 0%, #709c85 12px, #d4b258 15px, #d4b258 100%);
+}
+.scheme_vintage .btn:not(.disabled).bldEnabled.btnInterior:hover {
+	background: no-repeat border-box linear-gradient(90deg, #1b786d 0%, #709c85 11px, #d4b258 14px, #d4b258 100%);
 }
 /*** end of green light for machine on/off ***/
 .scheme_vintage .dialog {
